# onme

./: .gitignore  Makefile  README.md  alembic.ini
api/: .env.example  Procfile  auth.py  config.py  database.py  logging_config.py  main.py  models.py  pyproject.toml  rate_limit.py  repository.py  schemas.py  seed.py  serve.py
api/alembic/: env.py
api/alembic/versions/: 057fd8ef0b46_add_moodboardnode.py  12667a641fb8_initial_schema_users_moodboards_.py
api/db/: __init__.py  models.py
api/repositories/: garment_repo.py  moodboard_repo.py  user_repo.py
api/routes/: auth.py  garments.py  health.py  moodboards.py  tryon.py
api/services/: garment_providers.py  inference.py  pipeline.py  postprocessing.py  preprocessing.py
api/services/providers/: __init__.py  base.py  database.py  dummyjson.py  fakestore.py
api/tests/: test_auth.py  test_auth_me.py  test_auth_routes.py  test_e2e.py  test_moodboards.py  test_observability.py  test_postprocessing.py  test_preprocessing.py  test_repository.py  test_routes.py  test_security_gateway.py
eval/: ablation.py  aggregate.py  compute_fid.py  compute_metrics.py  evaluate.py  pyproject.toml  visualise.py
eval/metrics/: perceptual.py  semantic.py  structural.py
eval/tests/: test_metrics.py
web/: .env.example  package-lock.json  package.json
web/src/: app.css
web/src/lib/: api.ts  pipeline.ts  types.ts
web/src/lib/components/: ImageNode.svelte  NoteNode.svelte  Toast.svelte
web/src/lib/nodes/: ImageNode.svelte
web/src/lib/stores/: auth.svelte.ts  toast.svelte.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/(app)/: +layout.svelte
web/src/routes/metrics/: +page.svelte
web/src/routes/tryon/: +page.svelte
web/static/: metrics.json
(+6 files in other folders)
